# pip-hinge

./: .gitignore  LICENSE  README.md  hinge.py  pyproject.toml
docs/: clamshell-integration.md
docs/diagrams/: README.md  render_closed_vs_open.py  render_options.py  render_params.py
examples/: clamshell.py  clamshell_full.step  clamshell_full.stl  clamshell_half.step  clamshell_half.stl  clamshell_magnets.step  clamshell_magnets.stl  clamshell_small.step  clamshell_small.stl  hinge_chunky.step  hinge_chunky.stl  hinge_default.step  hinge_default.stl  hinge_double.step  hinge_double.stl  hinge_full.step  hinge_full.stl  hinge_half.step  hinge_half.stl  hinge_only.py
src/pip_hinge/: __init__.py
